--- a/TODO.org
+++ b/TODO.org
@@ -1,10 +1,15 @@
 * List
-** TODO Setup an rspec test harness
+** DONE Setup an rspec test harness
+   CLOSED: [2010-11-10 Wed 16:10]
+** DONE Support parens for grouping
+   CLOSED: [2010-11-10 Wed 16:10]
+** DONE Basic support for boolean queries (AND/OR)
+   CLOSED: [2010-11-10 Wed 16:10]
 ** TODO Put code into a QP module
 This may be a bit tricky b/c treetop is finding the extension modules
 by name.
-** TODO Support parens for grouping
-** TODO NOT
+** DONE NOT
+   CLOSED: [2010-11-10 Wed 16:19]
 ** TODO + for required
 ** TODO - for prohibited
 ** TODO Quoted strings aka phrases
