--- a/TODO.org
+++ b/TODO.org
@@ -1,13 +1,10 @@
-* List
+* Task List
 ** DONE Setup an rspec test harness
    CLOSED: [2010-11-10 Wed 16:10]
 ** DONE Support parens for grouping
    CLOSED: [2010-11-10 Wed 16:10]
 ** DONE Basic support for boolean queries (AND/OR)
    CLOSED: [2010-11-10 Wed 16:10]
-** TODO Put code into a QP module
-This may be a bit tricky b/c treetop is finding the extension modules
-by name.
 ** DONE NOT
    CLOSED: [2010-11-10 Wed 16:19]
 ** DONE + for required
@@ -33,3 +30,6 @@ to search for (1+1):2 use the query:
 ** TODO Proximity search
 ** TODO Term boosting
 ** TODO Fuzzy searches
+** TODO Put code into a QP module
+This may be a bit tricky b/c treetop is finding the extension modules
+by name.
