Details on allowing ANDX ORX

--- a/TODO.org
+++ b/TODO.org
@@ -11,7 +11,8 @@
    CLOSED: [2010-11-10 Wed 20:52]
 ** DONE - for prohibited
    CLOSED: [2010-11-10 Wed 21:12]
-** TODO Quoted strings aka phrases
+** DONE Quoted strings aka phrases
+   CLOSED: [2010-11-10 Wed 22:08]
 ** TODO Range query syntax
 ** TODO Fields
 ** TODO Field grouping
